Fixed dark mode

--- a/scoots/assets/css/medium.css
+++ b/scoots/assets/css/medium.css
@@ -24,6 +24,7 @@
 
         nav {
             border-radius: 18px;
+            font-size: 1.25rem;
         }
 
         h2 {
@@ -38,41 +39,41 @@
 
     #main-index {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: auto;
         gap: .5rem;
         padding: 0 18px 0;
     }
 
         .img-index {
-            grid-column: 1 / 4;
+            grid-column: 1 / 7;
             grid-row: 1;
             border-radius: 18px;
         }
 
         .weather {
-            grid-column: 1;
+            grid-column: 1 / 3;
             grid-row: 2;
         }
 
         .section-forecast {
-            grid-column: 2 / 4;
+            grid-column: 3 / 7;
             grid-row: 2;
         }
 
         .island-info {
-            grid-column: 1 / 3;
+            grid-column: 1 / 4;
             grid-row: 3;
         }
 
         .img-adventure {
-            grid-column: 3 / 4;
+            grid-column: 4 / 7;
             grid-row: 3;
             border-radius: 18px;
         }
 
         .about-us {
-            grid-column: 1 / 4;
+            grid-column: 1 / 7;
             grid-row: 4;
         }
 
@@ -145,14 +146,4 @@
         border-top-right-radius: 18px;
     }
 
-}
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background-color: #000;
-        --secondary-color: #fff;
-    }
-
-    body {
-        background: var(--background-color);
-    }
 }
